@@ -1,3 +1,8 @@
+2007-03-22 13:10 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfortran.c (gridcreate_) to account for fun3d-23948 c2n
+	index flip.
+
 2007-02-20  16:52 Mike Park  <mike.park@nasa.gov>
 	
 	* src/FAUXGeom.c (CADGeom_PointOnFace) to prevent unitialized
